# exaone4-finetune-bitext

./: .config-wandb  .gitignore  .metrics-wandb  MODEL_CARD.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  space.yml  train.sh  train_axolotl.sh  train_lora.sh
configs/: axolotl_deepspeed.yaml  axolotl_fsdp.yaml  zero2.yaml
notebooks/: notebook.ipynb
scripts/: train.py  train_lora.py
