[project]
name = "exaone4-finetune-bitext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "deepspeed>=0.18.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.0",
    "wandb>=0.23.1",
]
