[project]
name = "qwen3-1.7b-finetune-bitext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "deepspeed>=0.18.3",
    "peft>=0.18.0",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.0",
    "wandb>=0.23.1",
    "wheel>=0.45.1",
    "wrapt>=2.0.1",
]
